@@ -26,8 +26,8 @@ RDEPEND="sys-apps/pciutils"
 dir=/opt/vmware/tools
 Ddir=${D}/${dir}
 
+ANY_ANY=
 TARBALL="vmware-linux-tools.tar.gz"
-#VMwareTools-5.0.0-13124.tar.gz
 MY_P=${TARBALL/.tar.gz/}
 
 S=${WORKDIR}/vmware-tools-distrib
